<resources>
    <string name="app_name">HW01_Group3</string>
    <string name="button_createNewString">Create New</string>
    <string name="button_editContactString">Edit Contact</string>
    <string name="button_deleteContactString">Delete Contact</string>
    <string name="button_displayContactString">Display Contact</string>
    <string name="button_finish">Finish</string>
    <string name="imageButton_addPicString">Press to Capture Image</string>
    <string name="editText_firstNameHint">First</string>
    <string name="editText_lastNameHint">Last</string>
    <string name="editText_company">Company</string>
    <string name="editText_phoneHint">Phone</string>
    <string name="editText_emailHint">Email</string>
    <string name="editText_urlHint">URL</string>
    <string name="editText_addressHint">Address</string>
    <string name="editText_birthdayDateHint">Birthday</string>
    <string name="editText_nicknameHint">Nickname</string>
    <string name="editText_facebookHint">Facebook Profile URL</string>
    <string name="editText_twitterHint">Twitter Profile URL</string>
    <string name="editText_skypeHint">Skype</string>
    <string name="editText_youtube">YouTube Channel</string>
    <string name="button_saveFinish">Save</string>
    <string name="imageView_contactListView">This is an image of the contact</string>
    <string name="textView_firstNameContactListString">First</string>
    <string name="textView_lastNameContactListString">Last</string>
    <string name="textView_phoneContactListString">Phone Number:</string>
    <string name="textView_displayFirstString">First Name</string>
    <string name="textView_displayLastString">Last Name</string>
    <string name="textView_displayFullNameStaticString">Full Name:</string>
    <string name="textView_displayPhoneDynamic">Number</string>
    <string name="textView_displayCompanyStaticString">Company:</string>
    <string name="textView_displayCompanyDynamicString">Company</string>
    <string name="textView_displayEmailStaticString">Email:</string>
    <string name="textView_displayEmailDynamicString">Email</string>
    <string name="textView_displayAddressStaticString">Address:</string>
    <string name="textView_displayAddressDynamicString">Address</string>
    <string name="textView_displayBirthdayStaticString">Birthday:</string>
    <string name="textView_displayBirthdayDynamicString">Birthday</string>
    <string name="textView_displayNicknameStaticString">Nickname:</string>
    <string name="textView_notYetSetString">(This field has not been set)</string>
    <string name="textView_displayClickableLinksString">Clickable Links</string>
    <string name="textView_displayBasicURLStaticString">Contact Website:</string>
    <string name="textView_displayFacebookStatic">Facebook Profile:</string>
    <string name="textView_displayTwitterStaticString">Twitter Profile:</string>
    <string name="textView_displaySkypeStaticString">Skype:</string>
    <string name="textView_displayYoutubeStaticString">YouTube Account:</string>
    <string name="imageView_displayImageViewContentString">This is the contact image.</string>
</resources>
